--- a/template-game/index.html
+++ b/template-game/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Shape Game</title>
+        <title>Balloon Game</title>
         <style>
             @font-face {
                 font-family: 'KidsClub';
@@ -18,8 +18,12 @@
                 left:   -1000px;
             }
         </style>
+        <!--
+        <script src="getSettings.js"></script>
+        -->
         <script src="phaser.js"></script>
-        <script src="testgame.js"></script>
+        <script src="settings.js"></script>
+        <script src="game.js"></script>
     </head>
     <body>
         <div id=fontLoader>
