--- a/avoid-objects/index.html
+++ b/avoid-objects/index.html
@@ -20,6 +20,7 @@
         </style>
         <script src="getSettings.js"></script>
         <script src="phaser.js"></script>
+        <script src="gameIntro.js"></script>
         <script src="game.js"></script>
     </head>
     <body>
