--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <h2>avoid-objects</h2>
 <p><a href="avoid-objects/?settings=balloon.json">balloon</a></p>
 <h2>game-engine</h2>
-<p><a href="game-engine/?settings=balloon.json">balloon</a></p>
+<p><a href="game-engine/?settings=balloon1.json">balloon1</a></p>
+<p><a href="game-engine/?settings=balloon2.json">balloon2</a></p>
+<p><a href="game-engine/?settings=balloon3.json">balloon3</a></p>
+<p><a href="game-engine/?settings=balloon4.json">balloon4</a></p>
 <p><a href="game-engine/?settings=shapes.json">shapes</a></p>
-<h2>sides-game</h2>
+<p><a href="game-engine/?settings=balloon5.json">balloon5</a></p>
 </body>
 </html>
