better index page

--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
     <head>
         <meta charset="utf-8" />
         <title>Games</title>
+        <style>
+        /*
+            img {   width: 120px;
+                    height: 120px;
+            }
+        */
+        </style>
     </head>
     <body>
 <h2>avoid-objects</h2>
-<p><a href="avoid-objects/?settings=balloon.json">balloon</a></p>
-<p><a href="avoid-objects/?settings=ship.json">ship</a></p>
+<p><a href="avoid-objects/?settings=balloon.json"><img src="avoid-objects/images/balloon/player.png" />balloon</a></p>
+<p><a href="avoid-objects/?settings=ship.json"><img src="avoid-objects/images/ship/ship.png" />ship</a></p>
 <h2>pop-objects</h2>
-<p><a href="pop-objects/?settings=balloonA.json">balloonA</a></p>
-<p><a href="pop-objects/?settings=balloonB.json">balloonB</a></p>
-<p><a href="pop-objects/?settings=balloonC.json">balloonC</a></p>
-<p><a href="pop-objects/?settings=balloonD.json">balloonD</a></p>
-<p><a href="pop-objects/?settings=balloonE.json">balloonE</a></p>
-<p><a href="pop-objects/?settings=shapes.json">shapes</a></p>
+<p><a href="pop-objects/?settings=balloonA.json"><img src="pop-objects/images/balloonA/balloonA.png" />balloonA</a></p>
+<p><a href="pop-objects/?settings=balloonB.json"><img src="pop-objects/images/balloonB/balloonB.png" />balloonB</a></p>
+<p><a href="pop-objects/?settings=balloonC.json"><img src="pop-objects/images/balloonC/balloonC.png" />balloonC</a></p>
+<p><a href="pop-objects/?settings=balloonD.json"><img src="pop-objects/images/balloonD/balloonD.png" />balloonD</a></p>
+<p><a href="pop-objects/?settings=balloonE.json"><img src="pop-objects/images/balloonE/balloonE.png" />balloonE</a></p>
+<p><a href="pop-objects/?settings=shapes.json"><img src="pop-objects/images/shapes/triangle.png" />shapes</a></p>
 <h2>sides-game</h2>
 </body>
 </html>
