--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <body>
 <h2>avoid-objects</h2>
 <p><a href="avoid-objects/?settings=balloon.json"><img src="avoid-objects/images/balloon/player.png" />balloon</a></p>
+<p><a href="avoid-objects/?settings=bugs.json"><img src="avoid-objects/images/bugs/bug.png" />bugs</a></p>
 <p><a href="avoid-objects/?settings=ship.json"><img src="avoid-objects/images/ship/ship.png" />ship</a></p>
 <h2>pop-objects</h2>
 <p><a href="pop-objects/?settings=balloonA.json"><img src="pop-objects/images/balloonA/balloonA.png" />balloonA</a></p>
