--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
         <meta charset="utf-8" />
         <title>Games</title>
         <style>
-        /*
-            img {   width: 120px;
-                    height: 120px;
+            .gameType {
+                clear: both;
             }
-        */
+
+            .game {   
+                    float: left;
+            }
         </style>
     </head>
     <body>
-<h2>avoid-objects</h2>
-<p><a href="avoid-objects/?settings=balloon.json"><img src="avoid-objects/images/balloon/player.png" />balloon</a></p>
-<p><a href="avoid-objects/?settings=bugs.json"><img src="avoid-objects/images/bugs/bug.png" />bugs</a></p>
-<p><a href="avoid-objects/?settings=ship.json"><img src="avoid-objects/images/ship/ship.png" />ship</a></p>
-<h2>pop-objects</h2>
-<p><a href="pop-objects/?settings=balloonA.json"><img src="pop-objects/images/balloonA/balloonA.png" />balloonA</a></p>
-<p><a href="pop-objects/?settings=balloonB.json"><img src="pop-objects/images/balloonB/balloonB.png" />balloonB</a></p>
-<p><a href="pop-objects/?settings=balloonC.json"><img src="pop-objects/images/balloonC/balloonC.png" />balloonC</a></p>
-<p><a href="pop-objects/?settings=balloonD.json"><img src="pop-objects/images/balloonD/balloonD.png" />balloonD</a></p>
-<p><a href="pop-objects/?settings=balloonE.json"><img src="pop-objects/images/balloonE/balloonE.png" />balloonE</a></p>
-<p><a href="pop-objects/?settings=shapes.json"><img src="pop-objects/images/shapes/triangle.png" />shapes</a></p>
-<h2>sides-game</h2>
+<div class="gameType">avoid-objects</div>
+<div class="game"><img src="avoid-objects/images/balloon/player.png" /><div><a href="avoid-objects/?settings=balloon.json">balloon</a></div></div>
+<div class="game"><img src="avoid-objects/images/bugs/bug.png" /><div><a href="avoid-objects/?settings=bugs.json">bugs</a></div></div>
+<div class="game"><img src="avoid-objects/images/ship/ship.png" /><div><a href="avoid-objects/?settings=ship.json">ship</a></div></div>
+<div class="gameType">pop-objects</div>
+<div class="game"><img src="pop-objects/images/balloonA/balloonA.png" /><div><a href="pop-objects/?settings=balloonA.json">balloonA</a></div></div>
+<div class="game"><img src="pop-objects/images/balloonB/balloonB.png" /><div><a href="pop-objects/?settings=balloonB.json">balloonB</a></div></div>
+<div class="game"><img src="pop-objects/images/balloonC/balloonC.png" /><div><a href="pop-objects/?settings=balloonC.json">balloonC</a></div></div>
+<div class="game"><img src="pop-objects/images/balloonD/balloonD.png" /><div><a href="pop-objects/?settings=balloonD.json">balloonD</a></div></div>
+<div class="game"><img src="pop-objects/images/balloonE/balloonE.png" /><div><a href="pop-objects/?settings=balloonE.json">balloonE</a></div></div>
+<div class="game"><img src="pop-objects/images/shapes/triangle.png" /><div><a href="pop-objects/?settings=shapes.json">shapes</a></div></div>
+<div class="gameType">sides-game</div>
 </body>
 </html>
