game for letter F

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <div class="game"><img src="pop-objects/images/balloonC/balloonC.png" /><div><a href="pop-objects/?settings=balloonC.json">balloonC</a></div></div>
 <div class="game"><img src="pop-objects/images/balloonD/balloonD.png" /><div><a href="pop-objects/?settings=balloonD.json">balloonD</a></div></div>
 <div class="game"><img src="pop-objects/images/balloonE/balloonE.png" /><div><a href="pop-objects/?settings=balloonE.json">balloonE</a></div></div>
+<div class="game"><img src="pop-objects/images/balloonF/balloon.png" /><div><a href="pop-objects/?settings=balloonF.json">balloonF</a></div></div>
 <div class="game"><img src="pop-objects/images/shapes/triangle.png" /><div><a href="pop-objects/?settings=shapes.json">shapes</a></div></div>
 <div class="gameType">sides-game</div>
 </body>
