--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>Games</title>
         <style>
             .gameType {
+                font-size: 1.5em;
+                font-weight: bold;
+                font: sans-serif;
                 clear: both;
             }
 
