mover object is working

--- a/pop-objects/index.html
+++ b/pop-objects/index.html
@@ -21,6 +21,7 @@
         <script src="getSettings.js"></script>
         <script src="phaser.js"></script>
         <script src="gameIntro.js"></script>
+        <script src="mover.js"></script>
         <script src="game.js"></script>
     </head>
     <body>
